[package]
name = "colink-policy-module"
version = "0.1.0"
edition = "2021"

[dependencies]
colink-sdk-a = { version = "0.1.0", git = "ssh://git@github.com/CoLearn-Dev/colink-sdk-a-rust-dev.git" }
colink-sdk-p = { version = "0.1.0", git = "ssh://git@github.com/CoLearn-Dev/colink-sdk-p-rust-dev.git" }
prost = "0.9"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "rt", "fs"] }
tracing = "0.1"

[build-dependencies]
prost-build = "0.9"
